<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BankDroid START</string>
	<string name="copyright">START, BankDroid, 2010 (c)</string>

    <string name="errorTitle">Error</string>
    <string name="close">Close</string>
    <string name="progressText">Please wait while communicating with server...</string>
    <string name="errSystemError">System error.</string>
    <string name="errNoConnector">There is no bank connector available (or dummy is switched off).</string>
    <string name="warnActiveSession">You have an active banking session.</string>
    <string name="warnSessionTimeouted">Your session was closed due to inactivity timeout.</string>
    <string name="warnSessionTimeout">Your session will be closed within {0} seconds.</string>

	<!-- StartActivity -->
    <string name="title">BankDroid</string>
    <string name="subtitle">START</string>
    <string name="bankSelect">Select your bank:</string>
    <string name="loginId">Login ID:</string>
    <string name="smsOtp">SMS Password:</string>
    <string name="password">Password:</string>
    <string name="loginButton">Login</string>
    <string name="msgUseMenu">See menu for more options.</string>

	<!-- AuthPages -->
    <string name="newUser">New user...</string>
    <string name="bankSelected">Bank:</string>
    <string name="rememberUser">Remember users</string>
    <string name="rememberPassword">Remember password</string>
    <string name="rememberPIN">Remember PIN</string>
    <string name="deleteUser">Delete User</string>
    <string name="axaAccountSelect">Select an account:</string>
    <string name="axaInvalidOTP">Invalid one time password: %s.</string>
    <string name="msgUseSMSKey">The easiest way to use SMS password is SMS Key TM. Use it to copy and paste password quickly into the password field. For more information visit Android Market.</string>
    <string name="msgSMSKeyURL">SMS Key TM on Android Market...</string>
    <string name="msgSpecifyPIN">PIN must be fully specified first.</string>

	<!-- MainActivity -->
    <string name="msgWelcome">Welcome %s!</string>
    <string name="msgWelcomeDesc">You have logged in to %s! Choose one of the following options:</string>
    <string name="accountButton">Accounts</string>
    <string name="quickHistoryButton">Quick History</string>
    <string name="profileButton">Profile</string>
    <string name="customerProfileButton">Customer Profile</string>
    <string name="logoutButton">Logout</string>
    <string name="toBrowserButton">Relogin through Browser</string>
    <string name="callCenterButton">Call the Bank</string>
    <string name="searchTransactionButton">Transactions</string>
    <string name="msgNoDialer">There is no dialer app available to dial bank\'s phone number.</string>

	<!-- main menu -->
    <string name="menuPref">Settings</string>
    <string name="menuAbout">About</string>
    <string name="menuHome">Home</string>
    <string name="menuLogout">Logout</string>

	<!-- Preferences -->
    <string name="loginPrefs">Login Settings</string>
    <string name="saveLastLogin">Remember users</string>
    <string name="saveLastLoginSummary">Saves user IDs of users logging in.</string>
    <string name="sessionTimeout">Session timeout</string>
    <string name="sessionTimeoutSummary">After this inactivity period the session will be closed.</string>

    <string name="developerPrefs">Developer Settings</string>
    <string name="showDummyBank">Show Dummy Bank</string>
    <string name="showDummyBankSummary">Show Dummy Bank for testing purposes.</string>

	<!-- AccountList -->
    <string name="accountListTitle">Account List</string>
    <string name="msgUseContextMenu">Long press item for more options.</string>
    <string name="quickHistory">Quick History</string>
    <string name="shareDetails">Share Details</string>
    <string name="viewDetails">View Details</string>
    <string name="availableBalance">Available balance:</string>
    <string name="bookedBalance">Booked balance:</string>
    <string name="accountName">Name:</string>
    <string name="accountNumber">Account number:</string>
    <string name="accountType">Account type:</string>
    <string name="accountIBAN">IBAN:</string>
    <string name="shareChooseApplication">Choose application:</string>
    <string name="shareAccountSubject">Shared Account - {0}</string>
    <string name="shareAccountBodyTop"><![CDATA[Details of account:]]></string>

	<!-- Property Details -->
    <string name="tranDetailTitle">Transaction Details</string>
    <string name="accountDetailTitle">Account Details</string>
    <string name="customerDetailTitle">Customer Details</string>
    <string name="customerId">Customer ID:</string>
    <string name="customerName">Customer name:</string>
    <string name="shareCustomerSubject">Shared Customer Details</string>
    <string name="shareCustomerBodyTop"><![CDATA[Details of customer:]]></string>

	<!-- TransactionList -->
    <string name="tranListTitle">Transaction List</string>
    <string name="tranListSummary">List of transactions for account {0} in date range {1} to {2}.</string>
    <string name="all">any</string>
    <string name="variousCurrencies">[ various currencies ]</string>
    <string name="totals"><![CDATA[<b>Totals:</b> <font color="{3}">{0}</font> - <font color="{4}">{1}</font> = <font color="{5}">{2}</font>]]></string>
    <string name="warnNoTransaction">No transaction found.</string>
    <string name="transactionDate">Date:</string>
    <string name="transactionDescription">Description:</string>
    <string name="transactionAmount">Amount:</string>
    <string name="transactionBalance">Balance:</string>
    <string name="shareTransactionSubject">Shared Transaction</string>
    <string name="shareTransactionBodyTop"><![CDATA[Details of transaction:]]></string>
    <string name="shareBodyBottom"><![CDATA[-- shared from BankDroid START (http://start.bankdroid.info)]]></string>

	<!-- SearchTransaction -->
    <string name="searchTranTitle">Search Transactions</string>
    <string name="accountSelect">Please select an account:</string>
    <string name="periodTemplateLabel">Period template:</string>
    <string name="pleaseSelect">-- please select --</string>
    <string name="dateRangeLabel">Date from/to:</string>
    <string name="search">Search</string>
    <string name="accountPicker">Pick an account</string>
    <string name="periodPicker">Pick period template</string>
    <string name="msgAccountError">Failed to load account list. You may have to logout and login again to resolve the problem.</string>

	<!-- About -->
	<string name="aboutId">BankDroid START</string>
	<string name="aboutDesc">The START is product of the BankDroid open source project. Developed by voluntary programmers.</string>
	<string name="aboutDesc2">If you experience any problem with the application, or you would like to see some new features, feel free to contact us.</string>
	<string name="aboutUrl2">http://start.bankdroid.info</string>
	<string name="donateURL">http://bit.ly/8LrNB9</string>
	<string name="btnInfoSite">Blog</string>
	<string name="donateButton"> Donate</string>
	
	<!-- EULA -->
	<string name="eula_title">License</string>
	<string name="eula_accept">Accept</string>
	<string name="eula_refuse">Refuse</string>
	
	<!-- Dummy -->
	<string name="userSelect">Select user:</string>
	

</resources>
