<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
		android:title="@string/loginPrefs">
			
		<CheckBoxPreference 
			android:title="@string/saveLastLogin" 
			android:defaultValue="true"
			android:summary="@string/saveLastLoginSummary" 
			android:key="bankdroid.start.SaveLastLogin" />
		
		<CheckBoxPreference 
			android:title="@string/savePassword" 
			android:defaultValue="false" 
			android:summary="@string/savePasswordSummary"
			android:key="bankdroid.start.SavePassword" />
		
		<ListPreference
			android:title="@string/sessionTimeout"
			android:summary="@string/sessionTimeoutSummary"
			android:key="bankdroid.start.SessionTimeout"
			android:defaultValue="3"
			android:entries="@array/sessionTimeoutLabels"
			android:entryValues="@array/sessionTimeoutValues" 
			/>
	
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/developerPrefs">
			
		<CheckBoxPreference 
			android:title="@string/showDummyBank" 
			android:defaultValue="false"
			android:summary="@string/showDummyBankSummary" 
			android:key="bankdroid.start.ShowDummyBank" />
		
	</PreferenceCategory>

</PreferenceScreen>