<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/rootView"
    android:padding="5sp"
    style="@style/background"
    >

    <ImageView
    	android:id="@+id/logo"
    	android:src="@drawable/bankdroid_logo"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignParentTop="true"
    	android:layout_alignParentLeft="true"
    	android:padding="10sp"
    	/>
    	
    <TextView
    	android:id="@+id/title"
    	android:text="@string/title"
    	style="@style/title"
    	
    	android:paddingLeft="5sp"
    	android:paddingTop="10sp"
    	
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	
    	android:layout_alignParentTop="true"
    	android:layout_toRightOf="@id/logo"
    	android:layout_alignParentRight="true"
    	/>
    
    <TextView
    	android:id="@+id/subtitle"
    	android:text="@string/subtitle"
    	style="@style/subtitle"
    	
    	android:paddingLeft="5sp"
    	
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	
    	android:layout_below="@id/title"
    	android:layout_toRightOf="@id/logo"
    	android:layout_alignParentRight="true"
    	/>
    
    <!-- CONTENT -->
    
 	<TextView  
	    android:id="@+id/userSelectLabel"
	    android:text="@string/userSelect"
	    style="@style/labelText"

	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    
	    android:layout_below="@id/logo"
	    android:layout_alignParentLeft="true"
	    />

	<TextView
		android:id="@+id/msgUseMenu"
		android:text="@string/msgUseMenu"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		
		style="@style/commentText"
		
		android:layout_alignParentBottom="true"
		/>
	    
	<Button
		android:id="@+id/newUser"
		android:text="@string/newUser"

		style="@style/actionButton"

		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		
		android:layout_above="@id/msgUseMenu"
		/>

	<ListView
		android:id="@+id/userList"
		
		style="@style/listBox"
		
		android:layout_below="@id/userSelectLabel"
		android:layout_above="@id/newUser"
		/>	    
		
</RelativeLayout>
