<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	style="@style/background"
	>


<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/rootView"
    android:padding="5sp"
    style="@style/background"
    >

    <ImageView
    	android:id="@+id/logo"
    	android:src="@drawable/bankdroid_logo"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignParentTop="true"
    	android:layout_alignParentLeft="true"
    	android:padding="10sp"
    	/>
    	
    <TextView
    	android:id="@+id/title"
    	android:text="@string/title"
    	style="@style/title"
    	
    	android:paddingLeft="5sp"
    	android:paddingTop="10sp"
    	
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	
    	android:layout_alignParentTop="true"
    	android:layout_toRightOf="@id/logo"
    	android:layout_alignParentRight="true"
    	/>
    
    <TextView
    	android:id="@+id/subtitle"
    	android:text="@string/subtitle"
    	style="@style/subtitle"
    	
    	android:paddingLeft="5sp"
    	
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	
    	android:layout_below="@id/title"
    	android:layout_toRightOf="@id/logo"
    	android:layout_alignParentRight="true"
    	/>
    
    <!-- CONTENT -->
    
 	<TextView  
	    android:id="@+id/bankSelectLabel"
	    android:text="@string/bankSelect"
	    style="@style/labelText"

	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    
	    android:layout_below="@id/logo"
	    android:layout_alignParentLeft="true"
	    />
	    
	<Button
		android:id="@+id/selectBank"
		android:text="CIB Bank"
		android:drawableLeft="@drawable/icon"
		android:gravity="left"

		style="@style/fieldButton"
		
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		
		android:layout_below="@id/bankSelectLabel"
		/>
    
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/loginId"
	    style="@style/labelText"
	    android:id="@+id/loginIdLabel"
	    
	    android:layout_below="@id/selectBank"
	    android:layout_alignParentLeft="true"
	    />
	    
	<EditText
		android:id="@+id/loginId"
		android:text="local"
		android:singleLine="true"
		android:maxLength="20"

	    android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		
		style="@style/field"

		android:layout_below="@id/loginIdLabel"
		android:layout_alignParentLeft="true"
		/>
		    
	<TextView  
	    android:id="@+id/passwordLabel"
	    android:text="@string/password"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    style="@style/labelText"
	    
	    android:layout_alignParentLeft="true"
	    android:layout_below="@id/loginId"
	    />
	    
	<EditText
		android:id="@+id/password"
		android:text="password"
		android:inputType="textPassword"
		android:singleLine="true"
		android:maxLength="20"

	    android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		
		style="@style/field"
		
		android:layout_below="@id/passwordLabel"
		android:layout_alignParentLeft="true"
		/>
		
	<Button
		android:id="@+id/loginButton"
		android:text="@string/loginButton"

		style="@style/actionButton"

		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		
		android:layout_below="@id/password"
		/>

	<TextView
		android:id="@+id/msgUseMenu"
		android:text="@string/msgUseMenu"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		
		style="@style/commentText"
		
		android:layout_below="@id/loginButton"
		/>
	    
	    
</RelativeLayout>

</ScrollView>