<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	style="@style/background"
	>


<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/rootView"
    android:padding="5sp"
    style="@style/background"
    >

    <ImageView
    	android:id="@+id/logo"
    	android:src="@drawable/bankdroid_logo"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignParentTop="true"
    	android:layout_alignParentLeft="true"
    	android:padding="10sp"
    	/>
    	
    <TextView
    	android:id="@+id/title"
    	android:text="@string/title"
    	style="@style/title"
    	
    	android:paddingLeft="5sp"
    	android:paddingTop="10sp"
    	
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	
    	android:layout_alignParentTop="true"
    	android:layout_toRightOf="@id/logo"
    	android:layout_alignParentRight="true"
    	/>
    
    <TextView
    	android:id="@+id/subtitle"
    	android:text="@string/subtitle"
    	style="@style/subtitle"
    	
    	android:paddingLeft="5sp"
    	
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	
    	android:layout_below="@id/title"
    	android:layout_toRightOf="@id/logo"
    	android:layout_alignParentRight="true"
    	/>
    
    <!-- CONTENT -->
    <TableLayout
    	android:id="@+id/formLayout"
    	
    	style="@style/formLayout"

	    android:layout_below="@id/logo"
    	>
    	
    	<TableRow>
			<TextView  
			    android:id="@+id/bankSelectedLabel"
			    android:text="@string/bankSelected"
			    android:gravity="right"
			    android:paddingRight="10sp"
		
			    style="@style/labelText"
		
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    />
			    
			<TextView
				android:id="@+id/bankSelected"
				android:text="CIB Bank Zrt."
				android:drawableLeft="@drawable/icon"
				android:drawablePadding="10sp"
		
				style="@style/valueText"
		
			    android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				/>
		</TableRow>
    	<TableRow>
			<TextView  
			    android:id="@+id/loginIdLabel"
			    android:text="@string/loginId"
			    android:gravity="right"
			    android:paddingRight="10sp"
		
			    style="@style/labelText"
		
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    />
			    
			<EditText
				android:id="@+id/loginId"
		
				style="@style/field"
				android:maxLength="20"
		
			    android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				/>
		</TableRow>
		<TableRow>
			<TextView  
			    android:id="@+id/passwordLabel"
			    android:text="@string/password"
			    android:gravity="right"
			    android:paddingRight="10sp"
		
			    style="@style/labelText"
		
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    />
			    
			<EditText
				android:id="@+id/password"
				
				style="@style/field"
				android:inputType="textPassword"
				android:maxLength="20"
		
			    android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				/>
		</TableRow>
	</TableLayout>
		
	<CheckBox
		android:id="@+id/rememberPassword"
		android:text="@string/rememberPassword"
		
		style="@style/labelText"
		
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    
	    android:layout_below="@id/formLayout"
		/>

	<Button
		android:id="@+id/loginButton"
		android:text="@string/loginButton"

		style="@style/actionButton"

		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		
		android:layout_below="@id/rememberPassword"
		/>

</RelativeLayout>

</ScrollView>