<?xml version="1.0" encoding="utf-8"?>

<ScrollView  
	xmlns:android="http://schemas.android.com/apk/res/android"

	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	style="@style/background"
	>
	
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/rootView"
    style="@style/background"
    >


	<include
		android:id="@+id/titleView"
		layout="@layout/titlebar"
		/>

	<RelativeLayout
		android:id="@+id/pageHeader"
		
		style="@style/headerBackground"
		
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/titleView"
		>
	
	    <ImageView
	    	android:id="@+id/bankLogo"
	    	
	    	android:src="@drawable/icon"
	    	android:scaleType="centerInside"
	    	
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	
	    	android:layout_alignParentLeft="true"
	    	android:layout_alignParentTop="true"
	    	android:layout_marginTop="15sp"
	    	android:layout_marginLeft="5sp"
	    	android:layout_marginRight="5sp"
	    	/>


		<Button
			android:id="@+id/logoutButton"
			android:drawableLeft="@android:drawable/ic_menu_directions"
	
			style="@style/actionButton"
			android:padding="2sp"
			
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			
			android:layout_alignParentTop="true"
			android:layout_alignParentRight="true"
			/>
	    	
		<TextView 
			android:id="@+id/welcome" 

			android:text="@string/msgWelcome" 
			android:textSize="16sp"
			android:textColor="#000000" 
			android:paddingTop="15sp"
			android:paddingBottom="5sp"
			android:paddingRight="5sp"
			android:paddingLeft="5sp"
			
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_toRightOf="@id/bankLogo"
			android:layout_toLeftOf="@id/logoutButton"
			/>
			
		<TextView 
			android:id="@+id/description"
			 
			android:text="@string/msgWelcomeDesc" 
			android:textSize="12sp"
			android:textColor="@color/textDark" 
			android:padding="5sp"
			
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:layout_toRightOf="@id/bankLogo"
			android:layout_below="@id/welcome"
			android:layout_toLeftOf="@id/logoutButton"
			/>
				
	</RelativeLayout>
 	
 	<View
		android:id="@+id/headerBottom"
		android:background="@drawable/page_header"
		
		android:layout_below="@id/pageHeader"
		android:layout_width="fill_parent"
		android:layout_height="1sp"
		android:layout_marginBottom="5sp"
		/>
    
	<Button
		android:id="@+id/accountButton"
		android:text="@string/accountButton"
		
		style="@style/actionButton"
		
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		
		android:layout_below="@id/headerBottom"
		/>
    
	<Button
		android:id="@+id/quickHistoryButton"
		android:text="@string/quickHistoryButton"

		style="@style/actionButton"
		
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		
		android:layout_below="@id/accountButton"
		/>
    
	<Button
		android:id="@+id/searchTransactionButton"
		android:text="@string/searchTransactionButton"

		style="@style/actionButton"
		
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		
		android:layout_below="@id/quickHistoryButton"
		/>
    
	<Button
		android:id="@+id/customerProfileButton"
		android:text="@string/customerProfileButton"

		style="@style/actionButton"
		
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		
		android:layout_below="@id/searchTransactionButton"
		/>
	
	<View
		android:id="@+id/separator"
		android:background="#000"
		
		android:layout_margin="5sp"
		
		android:layout_width="fill_parent"
		android:layout_height="1sp"
		
		android:layout_below="@id/customerProfileButton"
		/>
    
	<Button
		android:id="@+id/toBrowserButton"
		android:text="@string/toBrowserButton"
		android:drawableLeft="@android:drawable/ic_menu_revert"
		android:onClick="onToBrowser"

		style="@style/actionButton"
		android:padding="0sp"
		
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		
		android:layout_below="@id/separator"
		/>
    
	<Button
		android:id="@+id/callCenterButton"
		android:text="@string/callCenterButton"
		android:drawableLeft="@android:drawable/ic_menu_call"
		android:onClick="onCallBank"

		style="@style/actionButton"
		android:padding="0sp"
		
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		
		android:layout_below="@id/toBrowserButton"
		/>
	    
</RelativeLayout>
</ScrollView>
