<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	style="@style/background"
  	>

 	<TextView
		android:id="@+id/title"
		android:text="@string/tranListTitle"
		
		style="@style/pageTitle"
		/>
  	
 	<TextView
		android:id="@+id/filterOptions"
		android:text="@string/tranListSummary"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:padding="5sp" 
		style="@style/commentText"
		
		android:layout_below="@id/title"
		/>
  	
 	<TextView
		android:id="@+id/totals"
		android:text="@string/totals"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="5sp" 
		style="@style/commentText"
		
		android:layout_alignParentBottom="true"
		/>
 	 	
	<ListView
		android:id="@+id/transactionList"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
		android:background="@android:drawable/editbox_dropdown_light_frame"
	  	
	  	android:layout_above="@id/totals"
	  	android:layout_below="@id/filterOptions"
	  	/>


    <ProgressBar
    	android:id="@+id/progressIndicator"

		style="@style/progressBar"    	
    	/>
		  	
</RelativeLayout>

