<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	style="@style/background"
	>


<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/rootView"
    style="@style/background"
    >

	<include
		android:id="@+id/header"
		layout="@layout/auth_header"
		/>
    
    <!-- CONTENT -->
    <TableLayout
    	android:id="@+id/formLayout"
    	
    	style="@style/formLayout"

	    android:layout_marginLeft="5sp"
	    android:layout_marginRight="5sp"
	    android:layout_below="@id/header"
    	>
    	
    	<TableRow>
			<TextView  
			    android:id="@+id/bankSelectedLabel"
			    android:text="@string/bankSelected"
			    android:gravity="right"
			    android:paddingRight="10sp"
		
			    style="@style/labelText"
		
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    />
			    
			<TextView
				android:id="@+id/bankSelected"
				android:text="AXA Bank"
				android:drawableLeft="@drawable/icon"
				android:drawablePadding="10sp"
		
				style="@style/valueText"
		
			    android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				/>
		</TableRow>
    	<TableRow>
			<TextView  
			    android:id="@+id/loginIdLabel"
			    android:text="@string/loginId"
			    android:gravity="right"
			    android:paddingRight="10sp"
		
			    style="@style/labelText"
		
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    />
			    
			<EditText
				android:id="@+id/loginId"
		
				style="@style/field"
				android:maxLength="20"
		
			    android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				/>
		</TableRow>
		<TableRow>
			<TextView  
			    android:id="@+id/passwordLabel"
			    android:text="@string/password"
			    android:gravity="right"
			    android:paddingRight="10sp"
		
			    style="@style/labelText"
		
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    />
			    
			<EditText
				android:id="@+id/password"
				
				style="@style/field"
				android:inputType="textPassword"
				android:maxLength="20"
		
			    android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				/>
		</TableRow>
	</TableLayout>
		
	<CheckBox
		android:id="@+id/rememberPassword"
		android:text="@string/rememberPassword"
		
		style="@style/labelText"
		
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:layout_marginLeft="5sp"
	    android:layout_marginRight="5sp"
	    
	    android:layout_below="@id/formLayout"
		/>

	<Button
		android:id="@+id/loginButton"
		android:text="@string/loginButton"
		android:onClick="onLogin"

		style="@style/actionButton"

		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	    android:layout_marginLeft="5sp"
	    android:layout_marginRight="5sp"
		
		android:layout_below="@id/rememberPassword"
		/>

</RelativeLayout>

</ScrollView>